# btg-energy-challenge

./: README.md  main.py  pyproject.toml
src/challenge/: main.py
tests/: test_main.py
