[tool.poetry]
name = "btg-energy-challenge"
version = "0.1.0"
description = ""
authors = ["Candidato <Candidato@acme.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pandas = "2.0.3"
numpy = "1.25.1"
matplotlib = "3.8.4"
geopandas = "0.14.4"
shapely = "2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
    "tests/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"